[package]
name = "ntemm"
version = "1.1.0"
description = "Neverness to Everness Mod Manager"
authors = ["UnLuckyLust"]
license = "MIT"
repository = "https://github.com/UnLuckyLust/NTEMM"
homepage = "https://github.com/UnLuckyLust/NTEMM"
keywords = ["mod-manager", "tauri", "neverness-to-everness", "game-modding"]
edition = "2021"

[[bin]]
name = "NTEMM"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ntemm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
zip = "8.6.0"
walkdir = "2.5.0"
sanitize-filename = "0.6.0"
image = { version = "0.25", features = ["ico", "png"] }
tauri-plugin-process = "2"
uuid = { version = "1.23.1", features = ["v4"] }
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Registry", "Win32_Security", "Win32_Storage_FileSystem"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
